--- a/lp01.md
+++ b/lp01.md
@@ -1,4 +1,4 @@
-#Larry Plotter y El Bucle Filosofal
+﻿#Larry Plotter y El Bucle Filosofal
 
 El ni?o hu?rfano **Larry** vive con sus tios que lo tratan bastante mal (le hacen usar *Internet Explorer*).
 
