--- a/lp05.md
+++ b/lp05.md
@@ -4,4 +4,4 @@ El código de **Larry** cada vez se vuelve más peligroso.
 
 **Lord Ballmermort** y sus *followers* tienen cada vez más *retweets*.
 
-**La Orden de Unix** quiere enfrentarse a ellos.
+**La Orden de Unix** quiere enfrentarse a ellos y luchará por el fin del mundo.
