--- a/lp06.md
+++ b/lp06.md
@@ -1,3 +1,5 @@
 ﻿#Larry Plotter y el Misterio del Hacker
 
 **Larry** descubre un libro de ensamblador y compiladores que pertenece a un misterioso *hacker*.
+
+A lo largo de la historia, **Ballmermort** está de todo el misterio.
